test/fail/M0176.mo
from_candid (to_candid (1))
